statrted test courses using branches

--- a/codebase/tests/menu.html
+++ b/codebase/tests/menu.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-  <div class="topnav">
-<a class="title" href="#home">PATIENTCAPITAL</a>
-<a class="othert" href="#login">LOGIN</a>
-<a class="othert" href="#login">REGISTER</a>
-
-  </div>  
+    <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">porfolio</a></li>
+        <li><a href="#">about me</a></li>
+        <li><a href="#">contact</a></li>
+    </ul>
 </body>
 </html>
