--- a/codebase/index.html
+++ b/codebase/index.html
@@ -28,14 +28,36 @@
 </div> 
 
 <footer>
-<article>
-  <p><b>ADRESS</b><BR>
+<div class="company">
+  <ul>
+    <li><a href="#aboutus">aboutus</a></li>
+    <li><a href="#services">services</a></li>
+    <li><a href="#features">features</a></li>
+    <li><a href="#pricing">our pricing</a></li>
+    <li><a href="#latest news">latest news</a></li>
+  </ul>
 
-  Dar es salaam,<br>
-     Tanzania.<br>
-    <b>Contact us</b><br>
-      0748288520</p>
-</article>
+</div>
+
+<div class="support">
+  <ul>
+    <li><a href="#FAQ'S">FAQ'S</a></li>
+    <li><a href="#privacypolicy">privacypolicy</a></li>
+    <li><a href="#terms&conditions">terms&conditions</a></li>
+    <li><a href="#community">community</a></li>
+    <li><a href="#contact us">contact us</a></li>
+  </ul>
+</div>
+
+<div class="address">
+  <ul>
+    <li>location: Dar es salaam,Tanzania</li>
+    <li>Email:info@patientcapital.com</li>
+    <li>phone:+255748288520</li>
+    
+  </ul>
+</div>
+
 </footer>
 </body>
 </html>
