--- a/codebase/index.html
+++ b/codebase/index.html
@@ -28,36 +28,38 @@
 </div> 
 
 <footer>
+  <div class="grid">
 <div class="company">
-  <ul>
-    <li><a href="#aboutus">aboutus</a></li>
-    <li><a href="#services">services</a></li>
-    <li><a href="#features">features</a></li>
-    <li><a href="#pricing">our pricing</a></li>
-    <li><a href="#latest news">latest news</a></li>
-  </ul>
+  <ol>
+    <li><a href="#aboutus">About us</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#features">Features</a></li>
+    <li><a href="#pricing">Our pricing</a></li>
+    <li><a href="#latest news">Latest news</a></li>
+  </ol>
 
 </div>
 
 <div class="support">
-  <ul>
+  <ol>
     <li><a href="#FAQ'S">FAQ'S</a></li>
-    <li><a href="#privacypolicy">privacypolicy</a></li>
-    <li><a href="#terms&conditions">terms&conditions</a></li>
-    <li><a href="#community">community</a></li>
-    <li><a href="#contact us">contact us</a></li>
-  </ul>
+    <li><a href="#privacypolicy">Privacy policy</a></li>
+    <li><a href="#terms&conditions">Terms & Conditions</a></li>
+    <li><a href="#community">Community</a></li>
+    <li><a href="#contact us">Contact us</a></li>
+  </ol>
 </div>
 
 <div class="address">
-  <ul>
-    <li>location: Dar es salaam,Tanzania</li>
+  <ol>
+    <li>Location: Dar es salaam,Tanzania</li>
     <li>Email:info@patientcapital.com</li>
-    <li>phone:+255748288520</li>
+    <li>Phone:+255748288520</li>
     
-  </ul>
+  </ol>
 </div>
-
+</div>
+<article align="center">Patientcapital technologies @2021</article>
 </footer>
 </body>
 </html>
