--- a/codebase/index.html
+++ b/codebase/index.html
@@ -13,7 +13,7 @@
     <label><a class="title" href="index.html">PATIENT CAPITAL</a></label>
   <ul class="topnav"> 
    <li><a class="othert" href="sector.html">How it works?</a></li>
-<li><a class="othert" href="#about">ABOUT</a></li>
+<li><a class="othert" href="about.html">ABOUT</a></li>
 <li><a class="othert" href="#login">LOGIN</a></li>
 <li><a class="othert" href="#register">REGISTER</a></li>
 <ul>
@@ -28,7 +28,7 @@
 </div> 
 
 <footer>
-  <div class="grid">
+  <div class="sector-footer-grid">
 <div class="company">
   <ol>
     <li><a href="#aboutus">About us</a></li>
