i have done a sectors page

--- a/codebase/index.html
+++ b/codebase/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <nav>
-    <label><a class="title" href="#home">PATIENT CAPITAL</a></label>
+    <label><a class="title" href="index.html">PATIENT CAPITAL</a></label>
   <ul class="topnav"> 
-   <li><a class="othert" href="#howitworks">How it works?</a></li>
+   <li><a class="othert" href="sector.html">How it works?</a></li>
 <li><a class="othert" href="#about">ABOUT</a></li>
 <li><a class="othert" href="#login">LOGIN</a></li>
 <li><a class="othert" href="#register">REGISTER</a></li>
