made final touches on sectors page layout notyet image links

--- a/codebase/sector.html
+++ b/codebase/sector.html
@@ -17,22 +17,12 @@
     <li><a class="othert" href="#register">REGISTER</a></li>
     <ul>
     </nav>
-    <img src="" alt="" class="sector-specific">
+    <img src="imgsvd/digital.jpeg" alt="" class="sector-specific">
 
-<div class="sector-body-grid">
+<div class="sector-body-grid  wrapper">
 
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, ab dignissimos? Commodi quis molestias quidem perferendis in odio laudantium obcaecati, animi praesentium minus, ducimus nisi molestiae! Id blanditiis vel modi quis repudiandae deserunt eum dicta exercitationem officia pariatur eligendi delectus animi deleniti ullam odio aliquam qui recusandae, corporis repellat explicabo!</div>
-<div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus error laudantium hic obcaecati. Facere, sed aliquid nam aperiam nulla deserunt nostrum autem debitis, vel rem dolorem dolor doloremque velit architecto magnam ratione natus provident eos neque dicta fugiat a eveniet eaque excepturi. A debitis molestias hic perspiciatis quisquam doloribus sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, esse. Consequatur, labore cum praesentium neque iure nemo odit repellat sequi rem, fuga nihil porro dolorem numquam provident! Vero nam velit praesentium voluptatem cupiditate labore eum ullam, illum assumenda mollitia natus, placeat aliquam! Consequatur, ab voluptas atque, vitae eligendi eos dolores odio mollitia repellat maiores reprehenderit sunt cupiditate suscipit eum amet!</div>
-
-
-
-
-
-
-
-
-
-
+<div class="content1"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, ab dignissimos? Commodi quis molestias quidem perferendis in odio laudantium obcaecati, animi praesentium minus, ducimus nisi molestiae! Id blanditiis vel modi quis repudiandae deserunt eum dicta exercitationem officia pariatur eligendi delectus animi deleniti ullam odio aliquam qui recusandae, corporis repellat explicabo!</div>
+<div class="content2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus error laudantium hic obcaecati. Facere, sed aliquid nam aperiam nulla deserunt nostrum autem debitis, vel rem dolorem dolor doloremque velit architecto magnam ratione natus provident eos neque dicta fugiat a eveniet eaque excepturi. A debitis molestias hic perspiciatis quisquam doloribus sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, esse. Consequatur, labore cum praesentium neque iure nemo odit repellat sequi rem, fuga nihil porro dolorem numquam provident! Vero nam velit praesentium voluptatem cupiditate labore eum ullam, illum assumenda mollitia natus, placeat aliquam! Consequatur, ab voluptas atque, vitae eligendi eos dolores odio mollitia repellat maiores reprehenderit sunt cupiditate suscipit eum amet!</div>
 
 
 </div>
