did login frontend and made pages addition

--- a/codebase/index.html
+++ b/codebase/index.html
@@ -11,12 +11,12 @@
 <body>
   <nav>
     <label><a class="title" href="index.html">PATIENT CAPITAL</a></label>
-  <ul class="topnav"> 
-   <li><a class="othert" href="sector.html">How it works?</a></li>
-<li><a class="othert" href="about.html">ABOUT</a></li>
-<li><a class="othert" href="#login">LOGIN</a></li>
-<li><a class="othert" href="#register">REGISTER</a></li>
-<ul>
+    <ul class="topnav"> 
+   <li><a class="othert" href="howitworks.html">How it works?</a></li>
+    <li><a class="othert" href="about.html">ABOUT</a></li>
+    <li><a class="othert" href="login.html">LOGIN</a></li>
+    <li><a class="othert" href="register.html">REGISTER</a></li>
+    <ul>
 </nav>
 <div class="banner"></div> 
 <div class="wrapper">
