--- a/codebase/sector.html
+++ b/codebase/sector.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+     <nav>
         <label><a class="title" href="index.html">PATIENT CAPITAL</a></label>
-      <ul class="topnav"> 
-       <li><a class="othert" href="#howitworks">How it works?</a></li>
-    <li><a class="othert" href="#about">ABOUT</a></li>
-    <li><a class="othert" href="#login">LOGIN</a></li>
-    <li><a class="othert" href="#register">REGISTER</a></li>
-    <ul>
-    </nav>
+        <ul class="topnav"> 
+        <li><a class="othert" href="howitworks.html">How it works?</a></li>
+      <li><a class="othert" href="about.html">ABOUT</a></li>
+        <li><a class="othert" href="login.html">LOGIN</a></li>
+      <li><a class="othert" href="register.html">REGISTER</a></li>
+      <ul>
+</nav>
     <img src="imgsvd/digital.jpeg" alt="" class="sector-specific">
 
 <div class="sector-body-grid  wrapper">
