set up registration front end, lack name fields

--- a/codebase/login.html
+++ b/codebase/login.html
@@ -26,9 +26,9 @@
     <div class="login-card">
         <div class="log_head">
         <h1>LOGIN</h1>
-        <span style="font-size: 60px; color:lightgray;" class="material-icons  lock">
-            account_circle
-            </span>
+            <span class="material-icons lock" style="font-size: 60px; color: aliceblue  ;">
+                login
+                </span>
         </div>
         
         
