made touches on howitworks and corrected names in register

--- a/codebase/index.html
+++ b/codebase/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav>
-    <label><a class="title" href="index.html">PATIENT CAPITAL</a></label>
+    <label><a class="title" href="index.html">AUSTIN'S EQUITY</a></label>
     <ul class="topnav"> 
    <li><a class="othert" href="howitworks.html">How it works?</a></li>
     <li><a class="othert" href="about.html">ABOUT</a></li>
@@ -20,11 +20,13 @@
 </nav>
 <div class="banner"></div> 
 <div class="wrapper">
-  
-  <img src="imgsvd/sample.png" alt="test" class="sector1">
-  <img src="imgsvd/sample.png" alt="test" class="sector2">
-  <img src="imgsvd/sample.png" alt="test" class="sector3">
 
+<div class="itemgrid">
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+</div>
+  
 </div> 
 
 <footer>
@@ -55,11 +57,12 @@
     <li>Location: Dar es salaam,Tanzania</li>
     <li>Email:info@patientcapital.com</li>
     <li>Phone:+255748288520</li>
+
     
   </ol>
 </div>
 </div>
-<article align="center">Patientcapital technologies @2021</article>
+<article align="center">codenasi @2021</article>
 </footer>
 </body>
 </html>
