--- a/codebase/login.html
+++ b/codebase/login.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav>
-        <label><a class="title" href="index.html">PATIENT CAPITAL</a></label>
+        <label><a class="title" href="index.html">AUSTIN'S EQUITY</a></label>
       <ul class="topnav"> 
        <li><a class="othert" href="howitworks.html">How it works?</a></li>
     <li><a class="othert" href="about.html">ABOUT</a></li>
@@ -36,7 +36,7 @@
         <form action="#" method="get">
          <table width="200" border="0" align="center">
           <tr>
-            <td><input placeholder="User Name" type="text" name="loginid" class="log_user" ></td>
+            <td><input placeholder="Email" type="text" name="emailid" class="log_user" ></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
