--- a/codebase/register.html
+++ b/codebase/register.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav>
-        <label><a class="title" href="index.html">PATIENT CAPITAL</a></label>
+        <label><a class="title" href="index.html">AUSTIN'S EQUITY</a></label>
       <ul class="topnav"> 
        <li><a class="othert" href="howitworks.html">How it works?</a></li>
     <li><a class="othert" href="about.html">ABOUT</a></li>
@@ -41,19 +41,19 @@
         <form action="#" method="get">
          <table width="200" border="0" align="center">
           <tr>
-            <td><input placeholder="First Name" type="text" name="loginid" class="log_user" ></td>
+            <td><input placeholder="First Name" type="text" name="firstname" class="log_user" ></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td><input placeholder="Last Name" type="text" name="loginid" class="log_user" ></td>
+            <td><input placeholder="Last Name" type="text" name="lastname" class="log_user" ></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td><input placeholder="Email" type="text" name="loginid" class="log_user" ></td>
+            <td><input placeholder="Email" type="text" name="emailid" class="log_user" ></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
@@ -65,25 +65,25 @@
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td><input placeholder="Repeat Password" type="password" name="pass" class="log_Pass"></td>
+            <td><input placeholder="Repeat Password" type="password" name="repeatpass" class="log_Pass"></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td><input name="remember" type="checkbox" value="Remember Me"> I agree with <a href="terms of service">Terms of service</a> and <a href="privacy policy" >Privacy policy</a></td>
+            <td><input name="acceptance" type="checkbox" value="accepted"> I agree with <a href="terms of service">Terms of service</a> and <a href="privacy policy" >Privacy policy</a></td>
             </tr>
             <tr>
             <td>&nbsp;</td>
             </tr>
             <tr>
-             <td><input type="submit" name="login" class="login-submit" value="SIGN IN"></td>
+             <td><input type="submit" name="register" class="login-submit" value="JOIN NOW"></td>
             </tr>
             <tr>
               <td>&nbsp;</td>
             </tr>
             <tr>
-             <td>Already have an account ?<a href="register.html" rel="register" style="color: darkgreen;">Sign Up</a></td>
+             <td>Already have an account ?<a href="login.html" rel="login" style="color: darkgreen;">Sign Up</a></td>
             </tr>
           </table>
           
