--- a/codebase/sector.html
+++ b/codebase/sector.html
@@ -9,7 +9,7 @@
 </head>
 <body>
      <nav>
-        <label><a class="title" href="index.html">PATIENT CAPITAL</a></label>
+      <label><a class="title" href="index.html">AUSTIN'S EQUITY</a></label>
         <ul class="topnav"> 
         <li><a class="othert" href="howitworks.html">How it works?</a></li>
       <li><a class="othert" href="about.html">ABOUT</a></li>
