finished html and css touches now statrting js

--- a/codebase/howitworks.html
+++ b/codebase/howitworks.html
@@ -33,6 +33,7 @@
 
 
     <div class="wrapper">
+        <div class="main-itworks-columns">
       <div class="itworks-columns">
 <div class="itworkcolumn">
     <h9>KYC</h9>
@@ -53,6 +54,12 @@
 <div class="itworkcolumn">
     <h9>PRINCIPAL PAYOUT</h9>
     <P class="iwc-p">Once the project deadline is reached, the project will pay back the principal amount with the outstanding interests to your account in Austin's equity.</P>
+</div>
+      </div>
+
+
+<div align="center" class="register-itwork" >
+    <a href="register.html" class="register-itworks">start investing</a>
 </div>
 
       </div>
